--- a/views/admin/post/edit.hbs
+++ b/views/admin/post/edit.hbs
@@ -10,13 +10,13 @@
     {{message}}
   </div>
   {{/if}}
-  <h3>Criar categoria</h3>
+  <h3>Editar categoria</h3>
   <div class="card">
     <div class="card-body">
-      <form action="/admin/categoria/criar" method="POST">
+      <form action="/admin/post/editar/{{category.id}}" method="POST">
         <label for="email">Nome: </label>
-        <input type="text" name="name" class="form-control mt-1" required>
-        <button type="submit" class="btn btn-success mt-4">Criar</button>
+        <input type="text" value="{{category.name}}" name="name" class="form-control mt-1" required>
+        <button type="submit" class="btn btn-success mt-4">Editar</button>
         <button type="button" class="btn btn-danger mt-4"><a href="/">Voltar</a></button>
       </form>
       </form>
