--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,12 +1,23 @@
 <main class="container my-5">
   <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-      featured content or information.</p>
+    <h1 class="display-4">Novos Posts</h1>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </p>
   </div>
 </main>
+
+<section class="container">
+  {{#each posts}}
+  <div class="card mt-4">
+    <div class="card-body">
+      <h3>{{title}}</h3>
+      <p>{{content}}</p>
+      <a href="/postagem/{{_id}}"><button class="btn btn-success">Leia mais</button></a>
+      <hr>
+      <small>Criado por: <strong>{{author.username}}</strong></small><br>
+      <small>Categoria: <strong>{{category.name}}</strong></small><br>
+      <small>Data da publicação: <strong>{{created_at}}</strong></small>
+    </div>
+  </div>
+  <br />
+  {{/each}}
+</section>
