--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="/css/main/loader.css">
+  <link rel="stylesheet" href="/css/main/global.css">
   {{#if post}}
     <title>{{post.title}}</title>
   {{else}}
