--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -1,33 +1,19 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Blog Node</a>
+      <a class="navbar-brand" href="/">Blog Node</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          {{#if user}}
-          {{else}}
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/usuario/logar">Login</a>
+            <a class="nav-link active" aria-current="page" href="/postagens">Postagens</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/usuario/registrar">Registrar</a>
+            <a class="nav-link active" aria-current="page" href="/categorias">Categorias</a>
           </li>
-          {{/if}}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Categorias
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              {{#each categorys}}
-              <li><a class="dropdown-item" href="/categoria/{{id}}">{{name}}</a></li>
-              {{/each}}
-            </ul>
-          </li>
-          {{#if user.is_admin}}
+          {{#if is_admin}}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
